# pyodmongo

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  aggregate.js  aggregate.py  code_of_conduct.md  coverage.json  coverage.py  docker-compose.yml  docs_release_notes.py  main.py  main2.py  main2_1.py  mkdocs.yml  mkdocs_build.sh  models.py  pre-commit  pyproject.py  pyproject.toml  requirements.txt  test.py  test_beanie.py  test_meta.py  test_odmantic.py  test_vrau.py
.github/: get_realease_version.py
db/: __init__.py
db_model/: __init__.py  aggregate.py  db_model.py  db_model_init.py  find.py  id_model.py  main_model.py  save.py
docs/: getting_started.en.md  getting_started.pt-BR.md  index.en.md  index.pt-BR.md  mkdocs.yml
docs_utils_pre_build/: docs_release_notes.py  resolve_exemples.py
pyodmondo/: __init__.py
pyodmondo_pv2/: __init__.py  db_model.py  id_model.py
pyodmongo/: __init__.py  json_schema.py  mypy.py  pydantic_version.py  type_adapter.py  version.py
pyodmongo_/: pydantic_version.py
tests/: conftest.py  test_action_with_error.py  test_async_aggregate.py  test_async_crud_db.py  test_class.py  test_crud_db.py  test_db_field_info.py  test_db_index.py  test_dbmodel.py  test_dict_empty.py  test_engines.py  test_error_action_failed.py  test_fastapi.py  test_field.py  test_id_model.py  test_model_init_functions.py  test_object_id.py  test_project_pipeline.py  test_pydantic_validators.py  test_queries.py  test_reference_pipeline.py  test_save_dict.py  test_sync_aggregate.py  test_sync_crud_db.py  test_verify_subclass.py  test_version.py
(+210 files in other folders)
